# serializer version: 1
# name: TestAggregationTrajectoryCall.test_call_equivalence_with_snapshot[dtw]
  np.float64(6.0)
# ---
# name: TestAggregationTrajectoryCall.test_call_equivalence_with_snapshot[edit]
  np.float64(7.666666666666667)
# ---
# name: TestAggregationTrajectoryCall.test_call_equivalence_with_snapshot[lcp]
  np.float64(0.0)
# ---
# name: TestAggregationTrajectoryCall.test_call_equivalence_with_snapshot[lcs]
  np.float64(0.6666666666666666)
# ---
# name: TestAggregationTrajectoryCall.test_call_equivalence_with_snapshot[linearpairwise]
  np.float64(1.0)
# ---
# name: TestAggregationTrajectoryCall.test_call_equivalence_with_snapshot[softdtw]
  np.float64(1.0888575183332592)
# ---
